--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
     </div>
 
-    <h1 class="credit">created by <a href="#">mr. web designer</a> all rights reserved. </h1>
+    <h1 class="credit">created by <a href="#">Miss Rashmi </a> all rights reserved. </h1>
 
 </div>
 
